prevent overflow at right and bottom screen border

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ html{
     background-size: cover;
     height: 100vh;
     max-width: 100vw;
+    overflow: hidden;
 }
 
 #background-img {
